Fixed page height on mobile

--- a/app/assets/css/landing/index.scss
+++ b/app/assets/css/landing/index.scss
@@ -12,6 +12,7 @@
             background: linear-gradient(to bottom, #74defb 0%,#ffffff 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
             flex: 2;
             position: relative;
+            min-height: 375px;
 
             .cloud-wrapper {
                 position: absolute;
@@ -57,6 +58,7 @@
                 align-items: center; 
                 z-index: 2;
                 margin-top: 100px;
+                font-size: 10px;
 
                 h1 { 
                     font-family: 'Open Sans'; 
@@ -80,6 +82,7 @@
             justify-content: center;
             color: #33788E;
             font-family: "Helvetica Neue", "Arial", "sans-serif";
+            min-height: 350px;
             
             .feature {
                 margin: 15px 35px;
@@ -172,7 +175,7 @@
     }
 }
 
-@media (max-height: 615px) {
+@media (max-width: 770px), (max-height: 750px) {
   .app-name {
       opacity: 0;
   }
@@ -191,7 +194,6 @@
         .features {
             margin-top: 20px;
             margin-bottom: 20px;
-            font-size: 12px;
         }
     }
 }
